# GEA_QDAP_adaptive_and_deduplication_old

./: OPTIMIZATION.md  README.md
Exact/c201535/: R2_c201535.gms
Exact/c201555/: R2_c201555.gms
Exact/c201575/: R2_c201575.gms
Exact/c300695/: R2_c300695.gms
Exact/c300775/: R2_c300775.gms
Exact/c302055/: R2_c302055.gms
Exact/c351535/: R2_c351535.gms
Exact/c351595/: R2_c351595.gms
GEA_GQAP_Python/: README.md  pyproject.toml
GEA_GQAP_Python/datasets/: T1.m  T12.m  T7.m  T8.m  c201555.m  c300775.m  c302095.m
GEA_GQAP_Python/gea_gqap_python/: __init__.py  algorithm.py  heuristics.py  model_loader.py  models.py
GEA_GQAP_Python/results/: c351595_iter_history.csv  c351595_summary.txt  pytest_results.txt
GEA_GQAP_Python/tests/: test_algorithm.py
Metaheuristics_GEA/: AddPaths.m
Metaheuristics_GEA/Algorithm/: Algorithm_GA_Quadratic.m  Analyze.m  Analyze_Perm.m  CombineQ.m  CompareQ.m  ConverC2D.m  MergePop.m  My_c201575_Scen3_Sensitivity.sh  Run_c201575_Crossover_Sensitivity.m  Run_c201575_Mutation_Sensitivity.m  Run_c201575_Scen3_Sensitivity.m  Run_c351595.m  my_c201575_Crossover_Sensitivity.sh  my_c201575_Mutation_Sensitivity.sh  my_c351595.sh
gea_gqap_adaptive_python/: README.md
gea_gqap_adaptive_python/Trashbin/: ADAPTIVE_PARAMETERS.md  check_results.py  compare_algorithms.py  create_win_statistics.py  run_all_comparisons.py  summarize_results.py  test_alpha_comparison.py  wait_and_summarize.sh
gea_gqap_adaptive_python/datasets/: T10.m  T11.m  T2.m  T4.m  T5.m  T6.m  T9.m  c300695.m  c302055.m  c302075.m  c351535.m
(+40 files in other folders)
