[project]
name = "gea-gqap-python"
version = "0.1.0"
description = "Python port of the Generalized Evolutionary Algorithm for GQAP"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

